test/Transforms/TypeVarInference/infer_tvars_fail.llzk
// RUN: llzk-opt -split-input-file -llzk-infer-tvar -verify-diagnostics %s

module attributes {llzk.lang} {
  poly.template @TConflict {
    poly.param @T : !poly.tvar<@T>

    function.def @conflict(%arg: !poly.tvar<@T>) {
      // expected-note@+1 {{previous inference here}}
      %first = poly.unifiable_cast %arg : (!poly.tvar<@T>) -> !array.type<4 x index>
      // expected-error@+1 {{conflicting inferred type for template parameter @T: '!array.type<4 x index>' vs '!array.type<8 x index>'}}
      %second = poly.unifiable_cast %arg : (!poly.tvar<@T>) -> !array.type<8 x index>
      function.return
    }
  }
}

// -----

module attributes {llzk.lang} {
  poly.template @TContractProofConflict {
    poly.param @T : !poly.tvar<@T>

    function.def @compute(%arg: !poly.tvar<@T>) {
      // expected-note@+1 {{previous inference here}}
      %index = poly.unifiable_cast %arg : (!poly.tvar<@T>) -> index
      function.return
    }

    verif.contract @Bad for @TContractProofConflict::@compute (%arg: !poly.tvar<@T>) {
      // expected-error@+1 {{conflicting inferred type for template parameter @T: 'index' vs '!felt.type'}}
      %felt = poly.unifiable_cast %arg : (!poly.tvar<@T>) -> !felt.type
      %ok = arith.constant true
      verif.ensure_compute %ok
    }
  }
}

// -----

module attributes {llzk.lang} {
  poly.template @TWildcardParamConflict {
    poly.param @T : !poly.tvar<@T>

    function.def @id(%arg: !poly.tvar<@T>) -> !poly.tvar<@T> {
      %index = poly.unifiable_cast %arg : (!poly.tvar<@T>) -> index
      function.return %arg : !poly.tvar<@T>
    }
  }

  function.def @call_id(%arg: !felt.type) -> !felt.type {
    // expected-error@+1 {{call signature '(!felt.type) -> !felt.type' does not match inferred callee signature '(index) -> index'}}
    %0 = function.call @TWildcardParamConflict::@id<[?]>(%arg) : (!felt.type) -> !felt.type
    function.return %0 : !felt.type
  }
}

// -----

module attributes {llzk.lang} {
  poly.template @TFunctionLocalImplicitParamConflict {
    poly.param @T : !poly.tvar<@T>

    function.def @f(%arg: !poly.tvar<@T>) -> index {
      %index = poly.unifiable_cast %arg : (!poly.tvar<@T>) -> index
      function.return %index : index
    }

    function.def @g(%arg: !poly.tvar<@T>) -> !poly.tvar<@T> {
      function.return %arg : !poly.tvar<@T>
    }
  }

  function.def @call_f(%arg: !felt.type) -> index {
    // expected-error@+1 {{explicit template argument for inferred parameter @T must match inferred type 'index', but found '!felt.type'}}
    %0 = function.call @TFunctionLocalImplicitParamConflict::@f(%arg) : (!felt.type) -> index
    function.return %0 : index
  }
}

// -----

module attributes {llzk.lang} {
  poly.template @TImplicitParamInferenceConflict {
    poly.param @T : !poly.tvar<@T>

    // Forces both args to have the same type.
    function.def @f(%lhs: !poly.tvar<@T>, %rhs: !poly.tvar<@T>) -> !poly.tvar<@T> {
      function.return %lhs : !poly.tvar<@T>
    }
  }

  function.def @call_f(%idx: index, %felt: !felt.type) -> index {
    // expected-error@+1 {{conflicting implicit template argument inferred for parameter @T from callee signature}}
    %0 = function.call @TImplicitParamInferenceConflict::@f(%idx, %felt) : (index, !felt.type) -> index
    function.return %0 : index
  }
}

// -----

module attributes {llzk.lang} {
  poly.template @TConflict {
    poly.param @T : !poly.tvar<@T>

    function.def @id(%arg: !poly.tvar<@T>) -> !poly.tvar<@T> {
      %index = poly.unifiable_cast %arg : (!poly.tvar<@T>) -> index
      function.return %arg : !poly.tvar<@T>
    }
  }

  function.def @call_id(%arg: !felt.type) -> index {
    // expected-error@+1 {{'function.call' op operand type mismatch: expected type 'index', but found '!felt.type' for operand number 0}}
    %0 = function.call @TConflict::@id(%arg) : (!felt.type) -> index
    function.return %0 : index
  }
}

// -----

module attributes {llzk.lang} {
  poly.template @TImplicitSignatureConflict {
    poly.param @T : !poly.tvar<@T>

    function.def @id(%arg: !poly.tvar<@T>) -> !poly.tvar<@T> {
      %index = poly.unifiable_cast %arg : (!poly.tvar<@T>) -> index
      function.return %arg : !poly.tvar<@T>
    }
  }

  function.def @call_id(%arg: !felt.type) -> !felt.type {
    // expected-error@+2 {{'function.call' op operand type mismatch: expected type 'index', but found '!felt.type' for operand number 0}}
    // expected-error@+1 {{'function.call' op result type mismatch: expected type 'index', but found '!felt.type' for result number 0}}
    %0 = function.call @TImplicitSignatureConflict::@id(%arg) : (!felt.type) -> !felt.type
    function.return %0 : !felt.type
  }
}

// -----

module attributes {llzk.lang} {
  poly.template @TFunctionLocalExplicitParamConflict {
    poly.param @T : !poly.tvar<@T>

    function.def @f(%arg: !poly.tvar<@T>) -> index {
      %index = poly.unifiable_cast %arg : (!poly.tvar<@T>) -> index
      function.return %index : index
    }

    function.def @g(%arg: !poly.tvar<@T>) -> !poly.tvar<@T> {
      function.return %arg : !poly.tvar<@T>
    }
  }

  function.def @call_f(%arg: !felt.type) -> index {
    // expected-error@+1 {{explicit template argument for inferred parameter @T must match inferred type 'index', but found '!felt.type'}}
    %0 = function.call @TFunctionLocalExplicitParamConflict::@f<[!felt.type]>(%arg) : (!felt.type) -> index
    function.return %0 : index
  }
}

// -----

module attributes {llzk.lang} {
  poly.template @TExplicitParamConflict {
    poly.param @T : !poly.tvar<@T>

    function.def @id(%arg: !poly.tvar<@T>) -> !poly.tvar<@T> {
      %index = poly.unifiable_cast %arg : (!poly.tvar<@T>) -> index
      function.return %arg : !poly.tvar<@T>
    }
  }

  function.def @call_id(%arg: !felt.type) -> !felt.type {
    // expected-error@+1 {{explicit template argument for inferred parameter @T must match inferred type 'index', but found '!felt.type'}}
    %0 = function.call @TExplicitParamConflict::@id<[!felt.type]>(%arg) : (!felt.type) -> !felt.type
    function.return %0 : !felt.type
  }
}

// -----

module attributes {llzk.lang} {
  poly.template @TOwnedStructExplicitParamConflict {
    poly.param @T : !poly.tvar<@T>

    struct.def @Box {
      struct.member @value : !poly.tvar<@T>

      function.def @product(%arg: !poly.tvar<@T>) -> !struct.type<@TOwnedStructExplicitParamConflict::@Box<[@T]>> attributes {function.allow_constraint, function.allow_witness} {
        %index = poly.unifiable_cast %arg : (!poly.tvar<@T>) -> index
        %self = struct.new : <@TOwnedStructExplicitParamConflict::@Box<[@T]>>
        struct.writem %self[@value] = %index : <@TOwnedStructExplicitParamConflict::@Box<[@T]>>, index
        function.return %self : !struct.type<@TOwnedStructExplicitParamConflict::@Box<[@T]>>
      }
    }

    // expected-error@+1 {{explicit template argument for inferred parameter @T must match inferred type 'index', but found '!felt.type'}}
    function.def @use_bad(%box: !struct.type<@TOwnedStructExplicitParamConflict::@Box<[!felt.type]>>) -> !struct.type<@TOwnedStructExplicitParamConflict::@Box<[!felt.type]>> {
      function.return %box : !struct.type<@TOwnedStructExplicitParamConflict::@Box<[!felt.type]>>
    }
  }
}
